Remove eslint and fix start command. add dotenv loading

--- a/.swcrc
+++ b/.swcrc
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://swc.rs/schema.json",
   "jsc": {
     "parser": {
       "syntax": "typescript",
@@ -25,5 +26,5 @@
   },
   "module": {
     "type": "commonjs"
-  }
+  },
 }
