--- a/package.json
+++ b/package.json
@@ -6,34 +6,34 @@
   "license": "ISC",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon",
-    "start": "npm run build && cross-env NODE_ENV=production node dist/app.js",
-    "build": "swc src -d dist --copy-files",
+    "start": "npm run build && cross-env NODE_ENV=production node dist/src/app.js",
+    "build": "swc src -d dist",
     "build:tsc": "tsc -p tsconfig.release.json && tsc-alias",
-    "lint": "eslint --ignore-path .gitignore --ext .ts src",
-    "lint:fix": "npm run lint -- --fix",
     "test": "jest --forceExit --detectOpenHandles",
     "test:watch": "npm run test -- --watchAll"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.220",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^17.0.45",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.1",
-    "nodemon": "^3.0.1",
-    "prettier": "^2.7.1",
-    "ts-jest": "^28.0.7",
-    "ts-node": "^10.9.1",
-    "tsc-alias": "^1.7.0",
-    "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.11.11",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.10",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.3",
+    "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.11",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.2"
   },
   "dependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
+    "tslib": "^2.8.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@swc/core"
+    ]
   }
 }
