--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@types/supertest": "^6.0.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
+    "supertest": "^7.0.0",
     "tslib": "^2.8.1"
   },
   "pnpm": {
